--- a/ui/index.html
+++ b/ui/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <div id="root"></div>
-        <script src="./src/index.jsx"></script>
+        <script type="module" src="./src/index.jsx"></script>
     </body>
 </html>
