--- a/ui/index.html
+++ b/ui/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Tutor Lab Queue System</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="./src/index.jsx"></script>
-  </body>
+
+<head>
+  <title>Tutor Lab Queue System</title>
+  <meta name="viewport" content="user-scalable=0, width=device-width, initial-scale=1">
+
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="./src/index.jsx"></script>
+</body>
+
 </html>
